--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "flux": "^2.1.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
